--- a/app/src/main/java/study/aa.ipynb
+++ b/app/src/main/java/study/aa.ipynb
@@ -1,1 +1,69 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"provenance":[],"authorship_tag":"ABX9TyN8UFO8ovP4oKaUTxnkYh5r"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"markdown","source":["# 요트다이스 만들기 aka.야추다이스\n","\n","### 4 of a Kind, Yacht 구현"],"metadata":{"id":"5yR1ak966d0H"}},{"cell_type":"code","execution_count":76,"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"X1FWVb5_u6WZ","executionInfo":{"status":"ok","timestamp":1710268091343,"user_tz":-540,"elapsed":1,"user":{"displayName":"이환희","userId":"14575890274279276966"}},"outputId":"64c658e8-d214-4310-c9bc-fe5f157c5f3f"},"outputs":[{"output_type":"stream","name":"stdout","text":["[3, 1, 2]\n","3 1 2\n","0\n"]}],"source":["# 4 of a Kind : 주사위를 굴려 동일한 주사위 눈이 2개 이상일 때. point에 주사위 눈 3개의 총합 추가.\n","\n","import random\n","import math\n","\n","dice1 = int(random.random()*3+1)\n","dice2 = int(random.random()*3+1)\n","dice3 = int(random.random()*3+1)\n","diceAll = [dice1,dice2,dice3]\n","point = 0\n","\n","if diceAll.count(1) >= 2 or diceAll.count(2) >= 2 or diceAll.count(3) >= 2 :\n","    point = sum(diceAll)\n","\n","print(diceAll)\n","print(dice1,dice2,dice3)\n","print(point)"]},{"cell_type":"code","source":["# Yacht : 주사위를 굴려 이어지는 주사위 눈이 3개 이상일 때. point에 30점 추가.\n","\n","dice1 = int(random.random()*3+1)\n","dice2 = int(random.random()*3+1)\n","dice3 = int(random.random()*3+1)\n","diceAll = [dice1,dice2,dice3]\n","point = 0\n","\n","if diceAll.count(1) >= 3 or diceAll.count(2) >= 3 or diceAll.count(3) >= 3 :\n","    point += 30\n","\n","print(diceAll)\n","print(dice1,dice2,dice3)\n","print(point)"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"sJ5VuOOTzwuI","executionInfo":{"status":"ok","timestamp":1710268203209,"user_tz":-540,"elapsed":1,"user":{"displayName":"이환희","userId":"14575890274279276966"}},"outputId":"b9f65dc9-2fe4-43c1-f4f6-aa634368c6c6"},"execution_count":103,"outputs":[{"output_type":"stream","name":"stdout","text":["[3, 3, 3]\n","3 3 3\n","30\n"]}]}]}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "26481d6a-31f2-43ae-a8c6-57befe07f2d4",
+   "metadata": {},
+   "source": [
+    "billboard hot-100에서 제목과 아티스트명 가지고 오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "114cf66f-0c48-4464-ab98-6e39cc54c38b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup as bs\n",
+    "from urllib.parse import quote\n",
+    "from urllib.request import urlopen\n",
+    "import json\n",
+    "\n",
+    "url = f'https://www.billboard.com/charts/hot-100/'\n",
+    "\n",
+    "html = urlopen(url)\n",
+    "soup = bs(html, 'html.parser')\n",
+    "\n",
+    "lists = soup.find('div',{'class':'chart-results-list'}).find_all('div',{'class':'o-chart-results-list-row-container'})\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "for items in lists:\n",
+    "    title = items.find('h3',{'class':'c-title'}).string.strip()\n",
+    "    artist = items.find('h3',{'class':'c-title'}).find_next().string.strip()\n",
+    "    \n",
+    "    song_info = {\n",
+    "        \"title\": title,\n",
+    "        \"artist\": artist\n",
+    "    }\n",
+    "\n",
+    "    data.append(song_info)\n",
+    "\n",
+    "with open('Ex01.json', 'w') as f:\n",
+    "    json.dump(data, f)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
