--- a/app/src/main/java/study/study0425/Ex01.ipynb
+++ b/app/src/main/java/study/study0425/Ex01.ipynb
@@ -46,7 +46,7 @@
     "t.shape('arrow')          # 터틀 모양 설정\n",
     "t.speed(0)          # 거북이 속도를 가장 빠르게 설정\n",
     "for i in range(n):      # 반복 횟수\n",
-    "    t.circle(???)       # 반지름이 120인 원을 그림\n",
+    "    t.circle(120)       # 반지름이 120인 원을 그림\n",
     "    t.right(360 / n)    # 오른쪽으로 돌면서 그림 그리기\n",
     "    \n",
     "mainloop()"
