--- a/app/src/main/java/study/aa.ipynb
+++ b/app/src/main/java/study/aa.ipynb
@@ -2,47 +2,98 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "26481d6a-31f2-43ae-a8c6-57befe07f2d4",
+   "id": "653e411a-0f57-4c17-8ddf-0e19a569424b",
    "metadata": {},
    "source": [
-    "billboard hot-100에서 제목과 아티스트명 가지고 오기"
+    "아래 명령어 실행하여 templates 파일에 Ex01.html 생성"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "114cf66f-0c48-4464-ab98-6e39cc54c38b",
+   "execution_count": null,
+   "id": "75d72e49-1eab-4131-8bb1-6b257ab02dbd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup as bs\n",
-    "from urllib.parse import quote\n",
-    "from urllib.request import urlopen\n",
-    "import json\n",
-    "\n",
-    "url = f'https://www.billboard.com/charts/hot-100/'\n",
-    "\n",
-    "html = urlopen(url)\n",
-    "soup = bs(html, 'html.parser')\n",
-    "\n",
-    "lists = soup.find('div',{'class':'chart-results-list'}).find_all('div',{'class':'o-chart-results-list-row-container'})\n",
-    "\n",
-    "data = []\n",
-    "\n",
-    "for items in lists:\n",
-    "    title = items.find('h3',{'class':'c-title'}).string.strip()\n",
-    "    artist = items.find('h3',{'class':'c-title'}).find_next().string.strip()\n",
-    "    \n",
-    "    song_info = {\n",
-    "        \"title\": title,\n",
-    "        \"artist\": artist\n",
-    "    }\n",
-    "\n",
-    "    data.append(song_info)\n",
-    "\n",
-    "with open('Ex01.json', 'w') as f:\n",
-    "    json.dump(data, f)"
+    "%%writefile ./templates/Ex01.html\n",
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "<body>\n",
+    "    <h2> title : {{ title }}</h2>\n",
+    "    <h5> data : {{ data }}</h5>\n",
+    "</body>\n",
+    "</html>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13568562-614c-41f0-b18b-45f96575f1ae",
+   "metadata": {},
+   "source": [
+    "아래 코드 완성하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a381d19a-61ef-4eb6-ab13-78c9f123c540",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from flask import Flask, render_template\n",
+    "\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "json_data = '''{\n",
+    "    \"main\": {\n",
+    "        \"title\":\"main\",\n",
+    "        \"data\":\"maindata\"\n",
+    "    },\n",
+    "    \"stage1\": {\n",
+    "        \"title\":\"stage1\",\n",
+    "        \"data\":\"stage1data\"\n",
+    "    },\n",
+    "    \"stage2\": {\n",
+    "        \"title\":\"stage2\",\n",
+    "        \"data\":\"stage2data\"\n",
+    "    }\n",
+    "}'''\n",
+    "\n",
+    "json_data = json.loads(json_data)\n",
+    "\n",
+    "# https://localhost:5000/\n",
+    "@app.route('/')\n",
+    "def main():\n",
+    "    title = json_data[\"main\"][\"title\"]\n",
+    "    data = json_data[\"main\"][\"data\"]\n",
+    "    return render_template('Ex01.html', title=title, data=data)\n",
+    "\n",
+    "# https://localhost:5000/stage1\n",
+    "@app.route('/stage1')\n",
+    "def stage1():\n",
+    "    title = json_data[\"stage1\"][\"title\"]\n",
+    "    data = json_data[\"stage1\"][\"data\"]\n",
+    "    return render_template('Ex01.html', title=title, data=data)\n",
+    "\n",
+    "# https://localhost:5000/stage2\n",
+    "@app.route('/stage2')\n",
+    "def stage2():\n",
+    "    title = json_data[\"stage2\"][\"title\"]\n",
+    "    data = json_data[\"stage2\"][\"data\"]\n",
+    "    return render_template('Ex01.html', title=title, data=data)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4763ca37-cd9c-44a3-9742-00f392bc9358",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
