--- a/app/src/main/java/study/study0427/Ex01.ipynb
+++ b/app/src/main/java/study/study0427/Ex01.ipynb
@@ -63,6 +63,7 @@
     "json_data = json.loads(json_data)\n",
     "\n",
     "# https://localhost:5000/\n",
+    "# 출력예시 title \: main\, data \: maindata\n",
     "@app.route('/')\n",
     "def main():\n",
     "    title = ???\n",
