--- a/app/src/main/java/study/study0427/Ex01.ipynb
+++ b/app/src/main/java/study/study0427/Ex01.ipynb
@@ -63,7 +63,10 @@
     "json_data = json.loads(json_data)\n",
     "\n",
     "# https://localhost:5000/\n",
-    "# 출력예시 title \: main\, data \: maindata\n",
+    "# 출력 예시 \n",
+    "# title : main\n",
+    "# data : maindata\n",
+    "\n",
     "@app.route('/')\n",
     "def main():\n",
     "    title = ???\n",
