--- a/app/src/main/java/study/study0427/Ex01.ipynb
+++ b/app/src/main/java/study/study0427/Ex01.ipynb
@@ -15,6 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!mkdir ./templates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c588c72e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%writefile ./templates/Ex01.html\n",
     "<!DOCTYPE html>\n",
     "<html>\n",
